# Genetic_algorithm

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: GA.cc  GA.hh  Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  test.cc
